infrastructure/frontend/fe-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: frontend
  labels:
    app: frontend
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
  #   cert-manager.io/acme-challenge-type: dns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:1.0.3
          ports:
            - containerPort: 80
              name: frontend
          imagePullPolicy: Always
