infrastructure/frontend/fe-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "fe.domain.com"
      secretName: fe-tls
  rules:
    - host: fe.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
